fixing some links

--- a/bibtex/bib/theory.bib
+++ b/bibtex/bib/theory.bib
@@ -456,6 +456,22 @@ noURL = {http://dx.doi.org/10.1080/14786441308634955},
       reportNumber   = "NAL-PUB-73-49-THY, FERMILAB-PUB-73-049-T",
       SLACcitation   = "%%CITATION = PHRVA,D8,3633;%%"
 }
+@article{Heinz:2002au,
+      author         = "Heinz, Ulrich W. and Hummel, A. and Lisa, M. A. and
+                        Wiedemann, U. A.",
+      title          = "{Symmetry constraints for the emission angle dependence
+                        of HBT radii}",
+      journal        = "Phys. Rev.",
+      volume         = "C66",
+      year           = "2002",
+      pages          = "044903",
+      doi            = "10.1103/PhysRevC.66.044903",
+      eprint         = "nucl-th/0207003",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-th",
+      reportNumber   = "NSF-ITP-02-48",
+      SLACcitation   = "%%CITATION = NUCL-TH/0207003;%%"
+}
 @article{Heinz:2013th,
       author         = "Heinz, Ulrich and Snellings, Raimond",
       title          = "{Collective flow and viscosity in relativistic heavy-ion
