figures, dijet asym, RAA

--- a/bibtex/bib/experiment.bib
+++ b/bibtex/bib/experiment.bib
@@ -117,6 +117,24 @@
       primaryClass   = "nucl-ex",
       SLACcitation   = "%%CITATION = ARXIV:1401.7680;%%"
 }
+@article{ALICE:2011ab,
+      noauthor         = "Aamodt, K. and others",
+      author         = "{ALICE Collaboration}",
+      title          = "{Higher harmonic anisotropic flow measurements of charged
+                        particles in Pb-Pb collisions at $\sqrt{s_{NN}}$=2.76
+                        TeV}",
+      collaboration  = "ALICE",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "107",
+      year           = "2011",
+      pages          = "032301",
+      doi            = "10.1103/PhysRevLett.107.032301",
+      eprint         = "1105.3865",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      reportNumber   = "CERN-PH-EP-2011-073",
+      SLACcitation   = "%%CITATION = ARXIV:1105.3865;%%"
+}
 @article{Chadwick:1932ma,
       author         = "Chadwick, J.",
       title          = "{Possible Existence of a Neutron}",
