--- a/bibtex/bib/theory.bib
+++ b/bibtex/bib/theory.bib
@@ -411,6 +411,22 @@ noURL = {http://dx.doi.org/10.1080/14786441308634955},
       nonote           = "[,325(1967)]",
       SLACcitation   = "%%CITATION = PHLTA,B25,29;%%"
 }
+@article{Gale:2012rq,
+      author         = "Gale, Charles and Jeon, Sangyong and Schenke, Björn and
+                        Tribedy, Prithwish and Venugopalan, Raju",
+      title          = "{Event-by-event anisotropic flow in heavy-ion collisions
+                        from combined Yang-Mills and viscous fluid dynamics}",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "110",
+      year           = "2013",
+      number         = "1",
+      pages          = "012302",
+      doi            = "10.1103/PhysRevLett.110.012302",
+      eprint         = "1209.6330",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-th",
+      SLACcitation   = "%%CITATION = ARXIV:1209.6330;%%"
+}
 @article{GellMann:1962xb,
       author         = "Gell-Mann, Murray",
       title          = "{Symmetries of baryons and mesons}",
@@ -651,6 +667,25 @@ noURL = {http://dx.doi.org/10.1080/14786441308634955},
       reportNumber   = "HUTP-97-A097, HUTP-98-A097",
       SLACcitation   = "%%CITATION = HEP-TH/9711200;%%"
 }
+
+
+@article{Marrochio:2013wla,
+      author         = "Marrochio, Hugo and Noronha, Jorge and Denicol, Gabriel
+                        S. and Luzum, Matthew and Jeon, Sangyong and Gale,
+                        Charles",
+      title          = "{Solutions of Conformal Israel-Stewart Relativistic
+                        Viscous Fluid Dynamics}",
+      journal        = "Phys. Rev.",
+      volume         = "C91",
+      year           = "2015",
+      number         = "1",
+      pages          = "014903",
+      doi            = "10.1103/PhysRevC.91.014903",
+      eprint         = "1307.6130",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-th",
+      SLACcitation   = "%%CITATION = ARXIV:1307.6130;%%"
+}
 @article{Miller:2007ri,
       author         = "Miller, Michael L. and Reygers, Klaus and Sanders,
                         Stephen J. and Steinberg, Peter",
@@ -685,6 +720,23 @@ noURL = {http://dx.doi.org/10.1080/14786441308634955},
       archivePrefix  = "arXiv",
       primaryClass   = "nucl-th",
       SLACcitation   = "%%CITATION = ARXIV:1404.7327;%%"
+}
+@article{Noronha-Hostler:2013gga,
+      author         = "Noronha-Hostler, Jacquelyn and Denicol, Gabriel S. and
+                        Noronha, Jorge and Andrade, Rone P. G. and Grassi,
+                        Frederique",
+      title          = "{Bulk Viscosity Effects in Event-by-Event Relativistic
+                        Hydrodynamics}",
+      journal        = "Phys. Rev.",
+      volume         = "C88",
+      year           = "2013",
+      number         = "4",
+      pages          = "044916",
+      doi            = "10.1103/PhysRevC.88.044916",
+      eprint         = "1305.1981",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-th",
+      SLACcitation   = "%%CITATION = ARXIV:1305.1981;%%"
 }
 @article{Pratt:1986cc,
       author         = "Pratt, S.",
