--- a/abstract.tex
+++ b/abstract.tex
@@ -1,14 +1,14 @@
 The spacetime dimensions of the particle source in proton-lead collisions at \pPbenergy is measured with the ATLAS detector at the Large Hadron Collider.
 Femtoscopic measurements are made from correlation functions built with charged pions identified by their ionization energy loss.
-The measured HBT radii that represent the source dimensions are presented differentially as a function of centrality, transverse momentum, rapidity.
+The measured HBT radii that represent the source dimensions are presented differentially as a function of centrality, transverse momentum, and rapidity.
 %% Pion pairs are selected with a rapidity $-2 < y^{\star}_{\pi\pi} < 1$ and with an average transverse momentum $0.1 < \kt < 0.8~\GeV$.
 The effect of jet fragmentation on the two-particle correlation function is studied, and a method using opposite-charge pair data to constrain its contributions to the measured correlations is described.
 The measured source sizes are substantially larger in more central collisions and are observed to decrease with increasing pair \kt.
 A correlation of the radii with the local charged-particle density \dNdy is demonstrated.
 The scaling of the extracted radii with the mean number of participating nucleons is also used to compare a parameterization of an initial-geometry model that allows for fluctuations in the proton cross-section.
 The cross-term $R_\mathrm{ol}$ is measured as a function of rapidity, and a nonzero value is observed that agrees with hydrodynamic predictions.
-The HBT radi are also shown for central events in intervals of azimuthal angle relative to 2nd-order event plane, pair transverse momentum, \kt, and flow vector magnitude, $|\qt|$, where the correlation functions are corrected for the event plane resolution.
+The HBT radii are also shown for central events in intervals of azimuthal angle relative to the 2nd-order event plane, pair transverse momentum, \kt, and flow vector magnitude, $|\qt|$, where the correlation functions are corrected for the event plane resolution.
 %% The event plane angle $\Psi_2$ and $|\qt|$ are measured in the side of the calorimeters that the Pb beam faces with pseudorapidity $\eta < -2.5$.
-Significant modulation of the transverse HBT radii \Rout, \Rside, and \Ros are observed.
+Significant modulations of the transverse HBT radii \Rout, \Rside, and \Ros are observed.
 The orientation of this modulation is the same as that in heavy-ion collisions, in which they are attributed to hydrodynamic evolution from an elliptic initial geometry.
 The sign and \kt dependence of these modulations are consistent with a hydrodynamic evolution of a short-lived medium.
