--- a/bibtex/bib/theory.bib
+++ b/bibtex/bib/theory.bib
@@ -116,20 +116,20 @@
       primaryClass   = "hep-lat",
       SLACcitation   = "%%CITATION = ARXIV:1701.02266;%%"
 }
-@article{Bazavov:2014pvz,
-      author         = "Bazavov, A. and others",
-      title          = "{Equation of state in ( 2+1 )-flavor QCD}",
-      collaboration  = "HotQCD",
-      journal        = "Phys. Rev.",
-      volume         = "D90",
-      year           = "2014",
-      pages          = "094503",
-      doi            = "10.1103/PhysRevD.90.094503",
-      eprint         = "1407.6387",
+@article{Bahr:2008pv,
+      author         = "B{\"{a}}hr, M. and others",
+      title          = "{Herwig++ Physics and Manual}",
+      journal        = "Eur. Phys. J. C",
+      volume         = "58",
+      year           = "2008",
+      pages          = "639",
+      doi            = "10.1140/epjc/s10052-008-0798-9",
+      eprint         = "0803.0883",
       archivePrefix  = "arXiv",
-      primaryClass   = "hep-lat",
-      reportNumber   = "BNL-105928-2014-JA",
-      SLACcitation   = "%%CITATION = ARXIV:1407.6387;%%"
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-PH-TH-2008-038, CAVENDISH-HEP-08-03, KA-TP-05-2008,
+                        DCPT-08-22, IPPP-08-11, CP3-08-05",
+      SLACcitation   = "%%CITATION = ARXIV:0803.0883;%%"
 }
 @article{Baier:2007ix,
       author         = "Baier, Rudolf and Romatschke, Paul and Son, Dam Thanh and
@@ -147,36 +147,20 @@
       reportNumber   = "BI-TP-2007-29, INT-PUB-07-45, SHEP-07-47",
       SLACcitation   = "%%CITATION = ARXIV:0712.2451;%%"
 }
-@article{Borsanyi:2013bia,
-      author         = "Borsanyi, Szabocls and Fodor, Zoltan and Hoelbling,
-                        Christian and Katz, Sandor D. and Krieg, Stefan and Szabo,
-                        Kalman K.",
-      title          = "{Full result for the QCD equation of state with 2+1
-                        flavors}",
-      journal        = "Phys. Lett.",
-      volume         = "B730",
+@article{Bazavov:2014pvz,
+      author         = "Bazavov, A. and others",
+      title          = "{Equation of state in ( 2+1 )-flavor QCD}",
+      collaboration  = "HotQCD",
+      journal        = "Phys. Rev.",
+      volume         = "D90",
       year           = "2014",
-      pages          = "99-104",
-      doi            = "10.1016/j.physletb.2014.01.007",
-      eprint         = "1309.5258",
+      pages          = "094503",
+      doi            = "10.1103/PhysRevD.90.094503",
+      eprint         = "1407.6387",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-lat",
-      SLACcitation   = "%%CITATION = ARXIV:1309.5258;%%"
-}
-@article{Bahr:2008pv,
-      author         = "B{\"{a}}hr, M. and others",
-      title          = "{Herwig++ Physics and Manual}",
-      journal        = "Eur. Phys. J. C",
-      volume         = "58",
-      year           = "2008",
-      pages          = "639",
-      doi            = "10.1140/epjc/s10052-008-0798-9",
-      eprint         = "0803.0883",
-      archivePrefix  = "arXiv",
-      primaryClass   = "hep-ph",
-      reportNumber   = "CERN-PH-TH-2008-038, CAVENDISH-HEP-08-03, KA-TP-05-2008,
-                        DCPT-08-22, IPPP-08-11, CP3-08-05",
-      SLACcitation   = "%%CITATION = ARXIV:0803.0883;%%"
+      reportNumber   = "BNL-105928-2014-JA",
+      SLACcitation   = "%%CITATION = ARXIV:1407.6387;%%"
 }
 @article{Bertsch:1989vn,
       author         = "Bertsch, G. F.",
@@ -214,6 +198,22 @@ pages = {1},
 year = {1913},
 doi = {10.1080/14786441308634955},
 noURL = {http://dx.doi.org/10.1080/14786441308634955},
+}
+@article{Borsanyi:2013bia,
+      author         = "Borsanyi, Szabocls and Fodor, Zoltan and Hoelbling,
+                        Christian and Katz, Sandor D. and Krieg, Stefan and Szabo,
+                        Kalman K.",
+      title          = "{Full result for the QCD equation of state with 2+1
+                        flavors}",
+      journal        = "Phys. Lett.",
+      volume         = "B730",
+      year           = "2014",
+      pages          = "99-104",
+      doi            = "10.1016/j.physletb.2014.01.007",
+      eprint         = "1309.5258",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-lat",
+      SLACcitation   = "%%CITATION = ARXIV:1309.5258;%%"
 }
 @article{Bozek:2014fxa,
       author         = "Bożek, Piotr",
@@ -255,6 +255,21 @@ noURL = {http://dx.doi.org/10.1080/14786441308634955},
       year           = "1991",
       reportNumber   = "OUNP-91-23",
       SLACcitation   = "%%CITATION = PHLTA,B270,69;%%",
+}
+@article{Buchel:2007mf,
+      author         = "Buchel, Alex",
+      title          = "{Bulk viscosity of gauge theory plasma at strong
+                        coupling}",
+      journal        = "Phys. Lett.",
+      volume         = "B663",
+      year           = "2008",
+      pages          = "286-289",
+      doi            = "10.1016/j.physletb.2008.03.069",
+      eprint         = "0708.3459",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-th",
+      reportNumber   = "UWO-TH-07-15",
+      SLACcitation   = "%%CITATION = ARXIV:0708.3459;%%"
 }
 @article{Buckley:2014ana,
       author         = "Buckley, Andy and Ferrando, James and Lloyd, Stephen and
@@ -738,6 +753,20 @@ noURL = {http://dx.doi.org/10.1080/14786441308634955},
       primaryClass   = "nucl-th",
       SLACcitation   = "%%CITATION = ARXIV:1305.1981;%%"
 }
+@article{Poskanzer:1998yz,
+      author         = "Poskanzer, Arthur M. and Voloshin, S. A.",
+      title          = "{Methods for analyzing anisotropic flow in relativistic
+                        nuclear collisions}",
+      journal        = "Phys. Rev.",
+      volume         = "C58",
+      year           = "1998",
+      pages          = "1671-1678",
+      doi            = "10.1103/PhysRevC.58.1671",
+      eprint         = "nucl-ex/9805001",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      SLACcitation   = "%%CITATION = NUCL-EX/9805001;%%"
+}
 @article{Pratt:1986cc,
       author         = "Pratt, S.",
       title          = "{Pion Interferometry of Quark-Gluon Plasma}",
@@ -761,6 +790,20 @@ noURL = {http://dx.doi.org/10.1080/14786441308634955},
       archivePrefix  = "arXiv",
       primaryClass   = "nucl-th",
       SLACcitation   = "%%CITATION = ARXIV:0811.3363;%%"
+}
+@article{Qiu:2011iv,
+      author         = "Qiu, Zhi and Heinz, Ulrich W.",
+      title          = "{Event-by-event shape and flow fluctuations of
+                        relativistic heavy-ion collision fireballs}",
+      journal        = "Phys. Rev.",
+      volume         = "C84",
+      year           = "2011",
+      pages          = "024911",
+      doi            = "10.1103/PhysRevC.84.024911",
+      eprint         = "1104.0650",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-th",
+      SLACcitation   = "%%CITATION = ARXIV:1104.0650;%%"
 }
 @article{Romatschke:2016hle,
       author         = "Romatschke, Paul",
@@ -831,6 +874,35 @@ noURL = {http://dx.doi.org/10.1080/14786441308634955},
       pages          = "030001",
       doi            = "10.1103/PhysRevD.98.030001",
       SLACcitation   = "%%CITATION = PHRVA,D98,030001;%%"
+}
+@article{Voloshin:1994mz,
+      author         = "Voloshin, S. and Zhang, Y.",
+      title          = "{Flow study in relativistic nuclear collisions by Fourier
+                        expansion of Azimuthal particle distributions}",
+      journal        = "Z. Phys.",
+      volume         = "C70",
+      year           = "1996",
+      pages          = "665-672",
+      doi            = "10.1007/s002880050141",
+      eprint         = "hep-ph/9407282",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = HEP-PH/9407282;%%"
+}
+@article{Weller:2017tsr,
+      author         = "Weller, Ryan D. and Romatschke, Paul",
+      title          = "{One fluid to rule them all: viscous hydrodynamic
+                        description of event-by-event central p+p, p+Pb and Pb+Pb
+                        collisions at $\sqrt{s}=5.02$ TeV}",
+      journal        = "Phys. Lett.",
+      volume         = "B774",
+      year           = "2017",
+      pages          = "351-356",
+      doi            = "10.1016/j.physletb.2017.09.077",
+      eprint         = "1701.07145",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-th",
+      SLACcitation   = "%%CITATION = ARXIV:1701.07145;%%"
 }
 @article{Wilczek:2000ih,
       author         = "Wilczek, Frank",
