--- a/thesis-defs.sty
+++ b/thesis-defs.sty
@@ -84,8 +84,6 @@ $\hfil\tilde{}\hfil$\crcr\noalign{\kern1.5pt}}}}}
 \def\etconeten{{\tt Etcone10}}
 \def\etconetwenty{{\tt Etcone20}}
 
-\newcommand{\ETmisssoft}{\ensuremath{E_{\text{T,soft}}^{\text{miss}}}}
-
 \def\sumve{\ensuremath{\sum\vec{E}_{\mathrm T}^{\mathrm e}}\xspace}
 \def\sumvtrk{\ensuremath{\sum\vec{E}_{\mathrm T}^{\mathrm trk}}\xspace}
 \def\sumvnu{\ensuremath{\sum\vec{E}_{\mathrm T}^{\mathrm \nu}}\xspace}
@@ -255,5 +253,6 @@ $\hfil\tilde{}\hfil$\crcr\noalign{\kern1.5pt}}}}}
 \newcommand{\qtx}{\ensuremath{q_{2,x}}\xspace}
 \newcommand{\qty}{\ensuremath{q_{2,y}}\xspace}
 \newcommand{\Ntoy}{\ensuremath{N_\textrm{toy}}\xspace}
+\newcommand{\Nbins}{\ensuremath{N_\textrm{bins}}\xspace}
 
 \newcommand{\fm}{\ensuremath{\mathrm{fm}}\xspace}
