adding and re-organizing bib entries

--- a/bibtex/bib/experiment.bib
+++ b/bibtex/bib/experiment.bib
@@ -1,5 +1,6 @@
 @article{Aaij:2015tga,
-      author         = "Aaij, Roel and others",
+      noauthor         = "Aaij, Roel and others",
+      author         = "{LHCb Collaboration}",
       title          = "{Observation of $J/\psi p$ Resonances Consistent with
                         Pentaquark States in $\Lambda_b^0 \to J/\psi K^- p$
                         Decays}",
@@ -14,6 +15,23 @@
       primaryClass   = "hep-ex",
       reportNumber   = "CERN-PH-EP-2015-153, LHCB-PAPER-2015-029",
       SLACcitation   = "%%CITATION = ARXIV:1507.03414;%%"
+}
+@article{Abelev:2012ola,
+      noauthor         = "Abelev, Betty and others",
+      author         = "{ALICE Collaboration}",
+      title          = "{Long-range angular correlations on the near and away
+                        side in $p$-Pb collisions at $\sqrt{s_{NN}}=5.02$ TeV}",
+      collaboration  = "ALICE",
+      journal        = "Phys. Lett.",
+      volume         = "B719",
+      year           = "2013",
+      pages          = "29-41",
+      doi            = "10.1016/j.physletb.2013.01.012",
+      eprint         = "1212.2001",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      reportNumber   = "CERN-PH-EP-2012-359",
+      SLACcitation   = "%%CITATION = ARXIV:1212.2001;%%"
 }
 @article{Abelev:2014pja,
       noauthor         = "Abelev, Betty Bezverkhny and others",
@@ -50,7 +68,8 @@
       SLACcitation   = "%%CITATION = ARXIV:1502.00559;%%"
 }
 @article{Adamczyk:2014mxp,
-      author         = "Adamczyk, L. and others",
+      noauthor         = "Adamczyk, L. and others",
+      author         = "{STAR Collaboration}",
       title          = "{Beam-energy-dependent two-pion interferometry and the
                         freeze-out eccentricity of pions measured in heavy ion
                         collisions at the STAR detector}",
@@ -85,7 +104,8 @@
       SLACcitation   = "%%CITATION = ARXIV:1702.01612;%%"
 }
 @article{Adams:2003ra,
-      author         = "Adams, J. and others",
+      noauthor         = "Adams, J. and others",
+      author         = "{STAR Collaboration}",
       title          = "{Azimuthally sensitive HBT in Au + Au collisions at
                       $\sqrt{s_\mathrm{NN}} = 200$ GeV}",
       collaboration  = "STAR",
@@ -99,8 +119,25 @@
       primaryClass   = "nucl-ex",
       SLACcitation   = "%%CITATION = NUCL-EX/0312009;%%"
 }
+@article{Adare:2006ti,
+      noauthor         = "Adare, A. and others",
+      author         = "{PHENIX Collaboration}",
+      title          = "{Scaling properties of azimuthal anisotropy in Au+Au and
+                        Cu+Cu collisions at s(NN) = 200-GeV}",
+      collaboration  = "PHENIX",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "98",
+      year           = "2007",
+      pages          = "162301",
+      doi            = "10.1103/PhysRevLett.98.162301",
+      eprint         = "nucl-ex/0608033",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      SLACcitation   = "%%CITATION = NUCL-EX/0608033;%%"
+}
 @article{Adare:2014vax,
-      author         = "Adare, A. and others",
+      noauthor         = "Adare, A. and others",
+      author         = "{PHENIX Collaboration}",
       title          = "{Azimuthal-angle dependence of
                         charged-pion-interferometry measurements with respect to
                         second- and third-order event planes in Au$+$Au collisions
