--- a/bibtex/bib/theory.bib
+++ b/bibtex/bib/theory.bib
@@ -404,6 +404,52 @@ noURL = {http://dx.doi.org/10.1080/14786441308634955},
       primaryClass   = "hep-lat",
       SLACcitation   = "%%CITATION = ARXIV:0906.3599;%%"
 }
+@article{Dusling:2012cg,
+      author         = "Dusling, Kevin and Venugopalan, Raju",
+      title          = "{Evidence for BFKL and saturation dynamics from dihadron
+                        spectra at the LHC}",
+      journal        = "Phys. Rev.",
+      volume         = "D87",
+      year           = "2013",
+      number         = "5",
+      pages          = "051502",
+      doi            = "10.1103/PhysRevD.87.051502",
+      eprint         = "1210.3890",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1210.3890;%%"
+}
+@article{Dusling:2012wy,
+      author         = "Dusling, Kevin and Venugopalan, Raju",
+      title          = "{Explanation of systematics of CMS p+Pb high multiplicity
+                        di-hadron data at $\sqrt{s}_\mathrm{NN} = 5.02$ TeV}",
+      journal        = "Phys. Rev.",
+      volume         = "D87",
+      year           = "2013",
+      number         = "5",
+      pages          = "054014",
+      doi            = "10.1103/PhysRevD.87.054014",
+      eprint         = "1211.3701",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1211.3701;%%"
+}
+@article{Dusling:2013qoz,
+      author         = "Dusling, Kevin and Venugopalan, Raju",
+      title          = "{Comparison of the color glass condensate to dihadron
+                        correlations in proton-proton and proton-nucleus
+                        collisions}",
+      journal        = "Phys. Rev.",
+      volume         = "D87",
+      year           = "2013",
+      number         = "9",
+      pages          = "094034",
+      doi            = "10.1103/PhysRevD.87.094034",
+      eprint         = "1302.7018",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1302.7018;%%"
+}
 @article{Fabjan:2003aq,
       author         = "Fabjan, C. W. and Gianotti, F.",
       title          = "{Calorimetry for particle physics}",
@@ -579,6 +625,18 @@ noURL = {http://dx.doi.org/10.1080/14786441308634955},
       reportNumber   = "SUNY-NTG-03-06",
       SLACcitation   = "%%CITATION = NUCL-TH/0305084;%%"
 }
+@article{Kovchegov:2014yza,
+      author         = "Kovchegov, Yuri V. and Wertepny, Douglas E.",
+      title          = "{Long-range rapidity correlations in heavy-light ion
+                        collisions}",
+      booktitle      = "{Proceedings, QCD Evolution Workshop}",
+      journal        = "Int. J. Mod. Phys. Conf. Ser.",
+      volume         = "25",
+      year           = "2014",
+      pages          = "1460023",
+      doi            = "10.1142/S2010194514600234",
+      SLACcitation   = "%%CITATION = INSPIRE-1285074;%%"
+}
 @article{Kovtun:2004de,
       author         = "Kovtun, P. and Son, Dan T. and Starinets, Andrei O.",
       title          = "{Viscosity in strongly interacting quantum field theories
@@ -682,8 +740,6 @@ noURL = {http://dx.doi.org/10.1080/14786441308634955},
       reportNumber   = "HUTP-97-A097, HUTP-98-A097",
       SLACcitation   = "%%CITATION = HEP-TH/9711200;%%"
 }
-
-
 @article{Marrochio:2013wla,
       author         = "Marrochio, Hugo and Noronha, Jorge and Denicol, Gabriel
                         S. and Luzum, Matthew and Jeon, Sangyong and Gale,
@@ -700,6 +756,22 @@ noURL = {http://dx.doi.org/10.1080/14786441308634955},
       archivePrefix  = "arXiv",
       primaryClass   = "nucl-th",
       SLACcitation   = "%%CITATION = ARXIV:1307.6130;%%"
+}
+@article{McLerran:2013una,
+      author         = "McLerran, Larry and Praszalowicz, Michal and Schenke,
+                        Björn",
+      title          = "{Transverse Momentum of Protons, Pions and Kaons in High
+                        Multiplicity pp and pA Collisions: Evidence for the Color
+                        Glass Condensate?}",
+      journal        = "Nucl. Phys. A",
+      volume         = "916",
+      year           = "2013",
+      pages          = "210-218",
+      doi            = "10.1016/j.nuclphysa.2013.08.008",
+      eprint         = "1306.2350",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1306.2350;%%"
 }
 @article{Miller:2007ri,
       author         = "Miller, Michael L. and Reygers, Klaus and Sanders,
