--- a/thesis-defs.sty
+++ b/thesis-defs.sty
@@ -245,6 +245,7 @@ $\hfil\tilde{}\hfil$\crcr\noalign{\kern1.5pt}}}}}
 \newcommand{\Pythia}{\textsc{Pythia}\xspace}
 %\newcommand{\Herwig}{\textsc{Herwig}\xspace}
 
+\newcommand{\mt}{\ensuremath{m_\mathrm{T}}\xspace}
 \newcommand{\qt}{\ensuremath{q_{2}}\xspace}
 \newcommand{\psit}{\ensuremath{\Psi_{2}}\xspace}
 \newcommand{\tdpk}{\ensuremath{2\left(\kphi-\psit\right)}\xspace}
