adding HTL reference

--- a/bibtex/bib/theory.bib
+++ b/bibtex/bib/theory.bib
@@ -188,6 +188,21 @@
       primaryClass   = "hep-ph",
       SLACcitation   = "%%CITATION = ARXIV:1309.6169;%%",
 }
+@article{Blaizot:2001nr,
+      author         = "Blaizot, Jean-Paul and Iancu, Edmond",
+      title          = "{The Quark gluon plasma: Collective dynamics and hard
+                        thermal loops}",
+      journal        = "Phys. Rept.",
+      volume         = "359",
+      year           = "2002",
+      pages          = "355-528",
+      doi            = "10.1016/S0370-1573(01)00061-8",
+      eprint         = "hep-ph/0101103",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "SACLAY-T01-005, CERN-TH-2000-272",
+      SLACcitation   = "%%CITATION = HEP-PH/0101103;%%"
+}
 @article{Bohr:1913,
 author = {N. Bohr},
 title = {I. On the constitution of atoms and molecules},
