some thermal field theory

--- a/bibtex/bib/theory.bib
+++ b/bibtex/bib/theory.bib
@@ -548,6 +548,18 @@ noURL = {http://dx.doi.org/10.1080/14786441308634955},
       reportNumber   = "NAL-PUB-73-49-THY, FERMILAB-PUB-73-049-T",
       SLACcitation   = "%%CITATION = PHRVA,D8,3633;%%"
 }
+@article{Gross:1980br,
+      author         = "Gross, David J. and Pisarski, Robert D. and Yaffe,
+                        Laurence G.",
+      title          = "{QCD and Instantons at Finite Temperature}",
+      journal        = "Rev. Mod. Phys.",
+      volume         = "53",
+      year           = "1981",
+      pages          = "43",
+      doi            = "10.1103/RevModPhys.53.43",
+      reportNumber   = "PRINT-80-0538 (PRINCETON)",
+      SLACcitation   = "%%CITATION = RMPHA,53,43;%%"
+}
 @article{Heinz:2002au,
       author         = "Heinz, Ulrich W. and Hummel, A. and Lisa, M. A. and
                         Wiedemann, U. A.",
