additional hydro review

--- a/bibtex/bib/theory.bib
+++ b/bibtex/bib/theory.bib
@@ -919,6 +919,17 @@ noURL = {http://dx.doi.org/10.1080/14786441308634955},
       primaryClass   = "nucl-th",
       SLACcitation   = "%%CITATION = ARXIV:1609.02820;%%"
 }
+@article{Romatschke:2017ejr,
+      author         = "Romatschke, Paul and Romatschke, Ulrike",
+      title          = "{Relativistic Fluid Dynamics In and Out of Equilibrium --
+                        Ten Years of Progress in Theory and Numerical Simulations
+                        of Nuclear Collisions}",
+      year           = "2017",
+      eprint         = "1712.05815",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-th",
+      SLACcitation   = "%%CITATION = ARXIV:1712.05815;%%"
+}
 @article{Romatschke:2017vte,
       author         = "Romatschke, Paul",
       title          = "{Relativistic Fluid Dynamics Far From Local Equilibrium}",
