laura's final comments

--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -1,10 +1,10 @@
-\chapter*{Acknowledgements} %I use an asterisk because I don't want my acknowledgements in the table of contents. I use \chapter to make sure that the acknowledgements go on the correct side of the page when you print out the dissertation.
+\chapter{Acknowledgments} %I use an asterisk because I don't want my acknowledgements in the table of contents. I use \chapter to make sure that the acknowledgements go on the correct side of the page when you print out the dissertation.
 
-acknowledgements go here
+acknowledgments go here
 
-%% to my parents, my first teachers (dedication separate?)
+%% to my parents, my first teachers 
 %% brian, bill
-%% postdocs: aaron, soumya
+%% postdocs: aaron, soumya, sarah, martin
 %% fellow physics grad students: laura, russell, ryne, josh, matt, zach (other group members)
 %% Brad, Devon, and Leah
 %% Kate
