--- a/acronyms.tex
+++ b/acronyms.tex
@@ -15,6 +15,7 @@
   \acro{EM}{electromagnetic}
   \acro{EoS}{equation of state}
   \acro{FCal}{forward calorimeter}
+  \acro{HBT}{Hanbury Brown and Twiss}
   \acro{HEC}{hadronic end-cap}
   \acro{HI}{heavy ion}
   \acro{HighET}{high transverse energy}
