HBT acronym and extra description

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -15,7 +15,7 @@
   \acro{EM}{electromagnetic}
   \acro{EoS}{equation of state}
   \acro{FCal}{forward calorimeter}
-  \acro{HBT}{Hanbury Brown and Twiss}
+  \acro{HBT}{Hanbury Brown and Twiss\acroextra{ (often used in ``HBT radii'', which refers to the dimensions of the source function in a nuclear collision)}}
   \acro{HEC}{hadronic end-cap}
   \acro{HI}{heavy ion}
   \acro{HighET}{high transverse energy}
