--- a/thesis.tex
+++ b/thesis.tex
@@ -233,7 +233,7 @@ All rights reserved
 
 %Here I need an acknowledgments page.
 %\newpage
-\include{./acknowledgements}
+\include{./acknowledgments}
 
 %\newpage
 \chapter*{Dedication} %Same here -- asterisk so that my dedication doesn't show up in the table of contents. You might want to take out "Dedication" as the title of this chapter. It's just here for a placeholder.
