--- a/acknowledgments.tex
+++ b/acknowledgments.tex
@@ -1,12 +1,19 @@
 \chapter{Acknowledgments} %I use an asterisk because I don't want my acknowledgements in the table of contents. I use \chapter to make sure that the acknowledgements go on the correct side of the page when you print out the dissertation.
 
-acknowledgments go here
+A thesis is not produced in a vacuum.
+Countless people have contributed directly and indirectly over the years, and I can only highlight some of them here.
 
-%% to my parents, my first teachers 
+Mick and Janice, my parents and first teachers, provided no end of emotional, developmental, and financial support.
+They never ceased to be available for me and I would not be here without them.
+My siblings Rachel, Josh, and David each helped me grow in their own ways during my childhood and to this day.
+I love you all.
+
+...
+
 %% brian, bill
 %% postdocs: aaron, soumya, sarah, martin
 %% fellow physics grad students: laura, russell, ryne, josh, matt, zach (other group members)
+%% Sathya, david stuart
 %% Brad, Devon, and Leah
-%% Kate
-%% Grandma June & GG & grandparents
-%% etc.
+%% ATLAS tracking performance group
+%% Kate, my partner
