--- a/thesis.tex
+++ b/thesis.tex
@@ -154,7 +154,7 @@
 \pagestyle{plain} %Put page numbers at the bottom-center for the whole dissertation. Columbia's dissertation office requires that the numbers appear at this location on the page throughout the document.
 
 \newcommand{\thesisTitle}{Femtoscopic signatures of small QGP droplets in proton-lead collisions at the Large Hadron Collider}
-\newcommand{\myName}{Michael (Felix) Clark}
+\newcommand{\myName}{Felix Michael Clark}
 \newcommand{\abstractText}{
   \input{abstract}
 }
