--- a/acknowledgments.tex
+++ b/acknowledgments.tex
@@ -6,11 +6,18 @@ Countless people have contributed directly and indirectly over the years, and I 
 Mick and Janice, my parents and first teachers, provided no end of emotional, developmental, and financial support.
 They never ceased to be available for me and I would not be here without them.
 My siblings Rachel, Josh, and David each helped me grow in their own ways during my childhood and to this day.
-I love you all.
+
+I am especially grateful to my advisor Brian Cole for his continual mentorship during my graduate career.
+He has taught me a lot about the experimental process and I can only hope to one day have a fraction of his scientific instincts.
+His energy, generosity, and flexibility have been helpful far beyond the level of obligation.
+Besides all this, he has excellent taste in beer.
+
+I would like to thank many others in the Columbia heavy ion group as well.
+Bill Zajc was an incredible resource particularly when I was a fresh new grad student trying to wrap my head around the kind of measurements in this thesis.
+Aaron Angerami was extremely generous with his time, going well out of his way to train new students and always being available for any sort of question.
 
 ...
 
-%% brian, bill
 %% postdocs: aaron, soumya, sarah, martin
 %% fellow physics grad students: laura, russell, ryne, josh, matt, zach (other group members)
 %% Sathya, david stuart
