--- a/acknowledgments.tex
+++ b/acknowledgments.tex
@@ -14,13 +14,17 @@ Besides all this, he has excellent taste in beer.
 
 I would like to thank many others in the Columbia heavy ion group as well.
 Bill Zajc was an incredible resource particularly when I was a fresh new grad student trying to wrap my head around the kind of measurements in this thesis.
-Aaron Angerami was extremely generous with his time, going well out of his way to train new students and always being available for any sort of question.
+Aaron Angerami in particular was extremely generous with his time, going well out of his way to train new students and always being available for any sort of question.
+The other postdocs in the group, Martin Ryb\'a\v{r}, Sarah Campbell, and especially Soumya Mohapatra have taught me a lot over the years as well.
+I also appreciate my co-temporal graduate students Tingting Wang, Laura Havener, Yun Tian, and Xiao Tu, who have answered many questions and have always been a pleasure to work with.
+%% Laura especially has been a wonderful friend and I am indebted to her for her support... gotta catch that bus brb
 
-...
+I am grateful for the many other friends from my cohort at Columbia, with whom I've worked on problem sets, qualifying exams, and other technical questions, including Russell Smith, Matt Anthony, Angelo Esposito, Ryne Carbone, and my roommate Zach Greene.
+They have been a great benefit to the recreational as well as the academic side of life.
 
-%% postdocs: aaron, soumya, sarah, martin
-%% fellow physics grad students: laura, russell, ryne, josh, matt, zach (other group members)
-%% Sathya, david stuart
-%% Brad, Devon, and Leah
-%% ATLAS tracking performance group
+Sathya Guruswamy, my undergraduate mentor, is an exceptional teacher not just in the classroom but also out of it.
+I appreciate David Stuart for hiring me into his lab as an undergraduate where I got my first exposure to high energy physics.
+My undergrad labmates Brad Axen, Devon Hollowood, and Leah Flink have taught me more than I can remember about physics, technology, and life and I am grateful we have been able to remain good friends despite scattering across the country.
+
+%% ATLAS heavy ion, tracking performance group
 %% Kate, my partner
