--- a/acknowledgments.tex
+++ b/acknowledgments.tex
@@ -16,15 +16,20 @@ I would like to thank many others in the Columbia heavy ion group as well.
 Bill Zajc was an incredible resource particularly when I was a fresh new grad student trying to wrap my head around the kind of measurements in this thesis.
 Aaron Angerami in particular was extremely generous with his time, going well out of his way to train new students and always being available for any sort of question.
 The other postdocs in the group, Martin Ryb\'a\v{r}, Sarah Campbell, and especially Soumya Mohapatra have taught me a lot over the years as well.
-I also appreciate my co-temporal graduate students Tingting Wang, Laura Havener, Yun Tian, and Xiao Tu, who have answered many questions and have always been a pleasure to work with.
-%% Laura especially has been a wonderful friend and I am indebted to her for her support... gotta catch that bus brb
+I also thank my co-temporal graduate students Tingting Wang, Laura Havener, Yun Tian, and Xiao Tu, who have answered many questions and have always been a pleasure to work with.
+I appreciate my academic sister Laura especially for being a wonderfully supportive friend through our time at Columbia, CERN, and various conferences, as she always provided encouragement when it was most needed.
 
-I am grateful for the many other friends from my cohort at Columbia, with whom I've worked on problem sets, qualifying exams, and other technical questions, including Russell Smith, Matt Anthony, Angelo Esposito, Ryne Carbone, and my roommate Zach Greene.
-They have been a great benefit to the recreational as well as the academic side of life.
+I am grateful for the many other friends from my cohort at Columbia, with whom I've worked on problem sets, qualifying exams, and other technical questions, including Russell, Matt, Angelo, Ryne, and my long-time roommate Zach.
+More importantly, they have kept my graduate school life enjoyable outside of physics.
 
 Sathya Guruswamy, my undergraduate mentor, is an exceptional teacher not just in the classroom but also out of it.
 I appreciate David Stuart for hiring me into his lab as an undergraduate where I got my first exposure to high energy physics.
 My undergrad labmates Brad Axen, Devon Hollowood, and Leah Flink have taught me more than I can remember about physics, technology, and life and I am grateful we have been able to remain good friends despite scattering across the country.
 
-%% ATLAS heavy ion, tracking performance group
-%% Kate, my partner
+Several other members of the ATLAS heavy ion group have generously lent me their assistance over the years, both with regards to analyses and during the November ion runs.
+In particular Peter Steinberg, Dominik Derendarz, and Tomasz Bold have been especially helpful in their participation on the editorial boards for the papers.
+In addition I appreciate the many various members of the ATLAS inner detector performance group for always being generous, helpful, and friendly.
+
+Finally I am eternally grateful to my partner, Kate, for her constant emotional support and encouragement, especially during the stressful period at the end of my graduate career.
+Personality traits that can be beneficial for science are often not the easiest to deal with on a personal level, and she has been patient, accepting, and understanding of that.
+For that I am more than lucky to have her.
