edits from Dave

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -14,6 +14,7 @@
   \acro{EF}{Event Filter}
   \acro{EM}{electromagnetic}
   \acro{EoS}{equation of state}
+  \acro{EP}{event plane}
   \acro{FCal}{forward calorimeter}
   \acro{HBT}{Hanbury Brown and Twiss\acroextra{ (often used in ``HBT radii'', which refers to the dimensions of the source function in a nuclear collision)}}
   \acro{HEC}{hadronic end-cap}
