--- a/bibtex/bib/theory.bib
+++ b/bibtex/bib/theory.bib
@@ -824,6 +824,17 @@ noURL = {http://dx.doi.org/10.1080/14786441308634955},
       primaryClass   = "nucl-ex",
       SLACcitation   = "%%CITATION = ARXIV:1801.03477;%%"
 }
+@article{Nagle:2018ybc,
+      author         = "Nagle, J. L. and Zajc, W. A.",
+      title          = "{Assessing saturation physics explanations of
+                        collectivity in small collision systems with the IP-Jazma
+                        model}",
+      year           = "2018",
+      eprint         = "1808.01276",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-th",
+      SLACcitation   = "%%CITATION = ARXIV:1808.01276;%%"
+}
 @article{Niemi:2014wta,
       author         = "Niemi, H. and Denicol, G. S.",
       title          = "{How large is the Knudsen number reached in fluid
