updating value of Tc with reference

--- a/bibtex/bib/theory.bib
+++ b/bibtex/bib/theory.bib
@@ -162,6 +162,16 @@
       reportNumber   = "BNL-105928-2014-JA",
       SLACcitation   = "%%CITATION = ARXIV:1407.6387;%%"
 }
+@article{Bazavov:2018mes,
+      author         = "Bazavov, A. and others",
+      title          = "{Chiral crossover in QCD at zero and non-zero chemical
+                        potentials}",
+      year           = "2018",
+      eprint         = "1812.08235",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-lat",
+      SLACcitation   = "%%CITATION = ARXIV:1812.08235;%%"
+}
 @article{Bertsch:1989vn,
       author         = "Bertsch, G. F.",
       title          = "{Pion Interferometry as a Probe of the Plasma}",
