removing line numbers

--- a/thesis.tex
+++ b/thesis.tex
@@ -78,9 +78,9 @@
 \setkeys{Gin}{width=0.8\linewidth}
 
 %% comment this out for final version
-\usepackage{lineno}
-\linenumbers
-\include{linenopatch}
+% \usepackage{lineno}
+% \linenumbers
+% \include{linenopatch}
 
 \let\newfloat\undefined
 \usepackage{floatrow}
