adding some previous HBT results

--- a/bibtex/bib/experiment.bib
+++ b/bibtex/bib/experiment.bib
@@ -119,6 +119,23 @@
       primaryClass   = "nucl-ex",
       SLACcitation   = "%%CITATION = NUCL-EX/0312009;%%"
 }
+@article{Adams:2004wz,
+      noauthor         = "Adams, J. and others",
+      author         = "{STAR Collaboration}",
+      title          = "{Azimuthal anisotropy and correlations at large
+                        transverse momenta in p+p and Au+Au collisions at
+                        $\sqrt{s_\mathrm{NN}} = 200$ GeV}",
+      collaboration  = "STAR",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "93",
+      year           = "2004",
+      pages          = "252301",
+      doi            = "10.1103/PhysRevLett.93.252301",
+      eprint         = "nucl-ex/0407007",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      SLACcitation   = "%%CITATION = NUCL-EX/0407007;%%"
+}
 @article{Adare:2006ti,
       noauthor         = "Adare, A. and others",
       author         = "{PHENIX Collaboration}",
