--- a/acknowledgments.tex
+++ b/acknowledgments.tex
@@ -10,7 +10,7 @@ My siblings Rachel, Josh, and David each helped me grow in their own ways during
 I am especially grateful to my advisor Brian Cole for his continual mentorship during my graduate career.
 He has taught me a lot about the experimental process and I can only hope to one day have a fraction of his scientific instincts.
 His energy, generosity, and flexibility have been helpful far beyond the level of obligation.
-Besides all this, he has excellent taste in beer.
+I am also fortunate that he can appreciate a good beer.
 
 I would like to thank many others in the Columbia heavy ion group as well.
 Bill Zajc was an incredible resource particularly when I was a fresh new grad student trying to wrap my head around the kind of measurements in this thesis.
@@ -27,9 +27,9 @@ I appreciate David Stuart for hiring me into his lab as an undergraduate where I
 My undergrad labmates Brad Axen, Devon Hollowood, and Leah Flink have taught me more than I can remember about physics, technology, and life and I am grateful we have been able to remain good friends despite scattering across the country.
 
 Several other members of the ATLAS heavy ion group have generously lent me their assistance over the years, both with regards to analyses and during the November ion runs.
-In particular Peter Steinberg, Dominik Derendarz, and Tomasz Bold have been especially helpful in their participation on the editorial boards for the papers.
+In particular Peter Steinberg and Tomasz Bold have been especially helpful in their roles chairing the editorial boards of the papers.
 In addition I appreciate the many various members of the ATLAS inner detector performance group for always being generous, helpful, and friendly.
 
 Finally I am eternally grateful to my partner, Kate, for her constant emotional support and encouragement, especially during the stressful period at the end of my graduate career.
-Personality traits that can be beneficial for science are often not the easiest to deal with on a personal level, and she has been patient, accepting, and understanding of that.
-For that I am more than lucky to have her.
+Personality traits that can be useful to scientists are often not easy to deal with on a personal level, and of those of mine she has been patient, accepting, and understanding.
+For that and more I am incredibly lucky to have her.
